# rust-api-seed

./: Cargo.toml  Dockerfile
.github/workflows/: branch-create.yaml  branch-delete.yaml  containerize.yaml
src/: main.rs
tools/: check
